--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Red Button</title>
-
+  <title>Nút Đỏ Bóng Bẩy Mobile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
+    html, body {
       margin: 0;
-      background: radial-gradient(circle at center, #ffffff, #c7c7c7);
-      height: 100vh;
+      padding: 0;
+      height: 100%;
+      background: radial-gradient(circle at center, #000000, #1a1a1a);
       display: flex;
       justify-content: center;
       align-items: center;
+      touch-action: manipulation;
     }
 
     button {
-      width: 120px;
-      height: 120px;
+      width: 30vw;
+      max-width: 150px;
+      aspect-ratio: 1 / 1;
       border-radius: 50%;
       border: none;
       background: radial-gradient(circle at 30% 30%, #ff4d4d, #b30000);
-      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.6);
+      box-shadow:
+        0 4px 10px rgba(255, 0, 0, 0.6),
+        inset -4px -4px 10px rgba(255,255,255,0.3),
+        inset 4px 4px 10px rgba(0,0,0,0.4);
       position: relative;
       cursor: pointer;
       transition: transform 0.2s ease;
@@ -29,19 +35,17 @@
     button::after {
       content: "";
       position: absolute;
-      top: 20%;
-      left: 20%;
-      width: 60%;
-      height: 60%;
-      background: rgba(173, 29, 29, 0.3);
+      top: 18%;
+      left: 18%;
+      width: 40%;
+      height: 40%;
+      background: rgba(255,255,255,0.3);
       border-radius: 50%;
       filter: blur(2px);
     }
 
     button:hover {
       transform: scale(1.05);
-      box-shadow:
-        0 6px 15px rgba(255, 0, 0, 0.8),
     }
 
     button:active {
@@ -51,13 +55,21 @@
 </head>
 <body>
 
-  <button onclick="playSound()"></button>
-  <audio id="mySound" src="audio/buttonaudio.mp3"></audio>
+  <button id="soundButton"></button>
+  <audio id="mySound" src="buttonclick.mp3" preload="auto"></audio>
+
   <script>
-    function playSound() {
-      const sound = document.getElementById("mySound");
+    const btn = document.getElementById("soundButton");
+    const sound = document.getElementById("mySound");
+
+    // Hỗ trợ desktop và mobile
+    btn.addEventListener("click", playSound);
+    btn.addEventListener("touchstart", playSound);
+
+    function playSound(e) {
+      e.preventDefault(); // tránh "double tap zoom" trên iOS
       sound.currentTime = 0;
-      sound.play().catch(err => console.error("Error:", err));
+      sound.play().catch(err => console.warn("Không thể phát âm thanh:", err));
     }
   </script>
 
